// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

package helloworld;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc Communicate(stream Request) returns (stream Reply) {}
  rpc Communicate2(stream Request) returns (stream Reply) {}
  rpc Communicate3(stream Request) returns (stream Reply) {}
  rpc Communicate4(stream Request) returns (stream Reply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

message Request {
	message Register {
		string cliendId = 1;
	}

	message UnRegister {
		string clientId = 1;
	}

	oneof type {
		Register register = 1;
		UnRegister unregister = 2;
	}
}

message Reply {
	message RegisterAck {
		string endpoint = 1; // %ip%:%port%
		string message = 2;
	}

	message UnRegisterAck {
		string endpoint = 1; // %ip%:%port%
		string message = 2;
	}

	oneof type {
		RegisterAck register = 1;
		UnRegisterAck unregister = 2;
	}
}

